prevent layout jump

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
 
 html,
 body {
+  position: fixed;
   width: 100%;
   height: 100%;
   padding: 0;
